# BigintCPP

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  BigInt.sln  CMakeLists.txt  LICENCE  Makefile  README.md  build.linux.sh  build.sh  build.windows.sh  codecov.yml  install.sh  test.linux.sh  test.sh  test.windows.sh
.github/workflows/: c-cpp.yml
BigInt/: BigInt.vcxproj  Test.cpp  bigint.cpp  travis.yml
cmake/: ClangTidy.cmake  ClangTools.cmake  CodeCoverage.cmake  Test.cmake
include/: bigint.h  smallvector.h
scripts/: install.sh
src/: BigInt.vcxproj.filters  CMakeLists.txt  bigint-test.cpp  bigint.cpp  bigint.h  main.cpp
test/: CMakeLists.txt  bigintTest.cpp  tests.txt
